<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jeremy.lychee.activity.user.PhoneLoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color"
        app:navigationIcon="@mipmap/ic_nav_back"
        app:titleTextColor="@color/toolbar_title"/>

    <com.jeremy.lychee.customview.user.LoginInputLayout
        android:id="@+id/telephone_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:input_name="@string/account"
        app:hint="@string/account_hint"
        app:inputType="phone" />

    <com.jeremy.lychee.customview.user.LoginInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:input_name="@string/password"
        app:hint="@string/password_hint"
        app:inputType="password" />

    <com.jeremy.lychee.customview.user.LoginImgAuthCodeLayout
        android:id="@+id/auth_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:visibility="gone"/>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:enabled="false"
        android:background="@drawable/phone_login_btn_bg"
        android:onClick="onLogin"
        android:text="@string/login_btn_txt"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRegister"
            android:textColor="@color/gray_text"
            android:text="@string/register_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/gray_text"
            android:onClick="onForget"
            android:text="@string/find_password_title" />
    </RelativeLayout>
</LinearLayout>
