<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/share"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFF">

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:text="@string/share_to_junior"
        android:textColor="@color/wemedia_album_list_item_title"
        android:textSize="16dp" />

    <View
        android:id="@+id/share_title_underline"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/tv_share"
        android:background="#E6E6E6" />

    <!-- 分享 -->
    <LinearLayout
        android:id="@+id/ll_share_block"
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:layout_below="@+id/share_title_underline"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_share_circle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/padding_medium"
            android:drawableTop="@drawable/share_circle_selector"
            android:gravity="center_horizontal"
            android:text="@string/share_circle"
            android:textColor="#999999"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_share_weixin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/padding_medium"
            android:drawableTop="@drawable/share_weixin_selector"
            android:gravity="center_horizontal"
            android:text="@string/share_weixin"
            android:textColor="#999999"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_share_weibo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/padding_medium"
            android:drawableTop="@drawable/share_weibo_selector"
            android:gravity="center_horizontal"
            android:text="@string/share_weibo"
            android:visibility="visible"
            android:textColor="#999999"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_copy_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/padding_medium"
            android:drawableTop="@drawable/share_more_selector"
            android:gravity="center_horizontal"
            android:text="@string/copy_url"
            android:textColor="#999999"
            android:textSize="12dp" />
    </LinearLayout>

    <View
        android:id="@+id/share_cancel_underline"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/ll_share_block"
        android:background="#E6E6E6" />

    <TextView
        android:id="@+id/tv_share_cancel"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/share_cancel_underline"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_cancel_bg"
        android:gravity="center"
        android:text="@string/share_cancel_btn"
        android:textColor="#666666"
        android:textSize="16dp" />

</RelativeLayout>